# vger-rs

./: Cargo.toml
src/: lib.rs
src/canvas3d/: camera.rs  mod.rs  shader.wgsl  vertices.rs
src/vger3d/: camera.rs  geometries.rs  mod.rs  transform.rs  uniforms.rs  vertices.rs
