[workspace]
resolver = "2" # What does this do?

[package]
name = "vger"
description = "2D GPU renderer for dynamic UIs"
version = "0.2.0"
license = "MIT"
readme = "README.md"
authors = ["Taylor Holliday <taylor@audulus.com>"]
keywords = ["graphics", "canvas", "vector", "drawing", "gpu"]
categories = ["graphics"]
repository = "https://github.com/audulus/vger-rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
naga = { git = "https://github.com/audulus/naga", branch = "MSL-address-space-backport-v0.8" }

[dependencies]
wgpu = "0.12.0"
futures = "0.3"
euclid = "0.22.6"
png = "0.16"
fontdue = "0.7.2"
rect_packer = "0.2.1"
rand = "0.7.3"

nalgebra    = "0.30.0" # TODO: use euclid
# parry3d-f64 = "0.8.0"
# winit = "0.26.1"
bytemuck = { version="1.8.0", features = [ "derive" ]}
fj-math = { path = "../fornjot/crates/fj-math" } # TODO: use euclid
fj-interop = { path = "../fornjot/crates/fj-interop" } # TODO: get rid of
